4-Security/manifests/hello-istio-secure-tcp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-istio-secure
  namespace: hello-istio
spec:
  selector:
    matchLabels:
      app: hello-istio-secure
  replicas: 1
  template:
    metadata:
      annotations: 
        sidecar.istio.io/inject: "true" 
      labels:
        app: hello-istio-secure
    spec:
      securityContext:
        hostNetwork: true
        privileged: true
        runAsUser: 0
        runAsGroup: 0
      containers:
      - name: tcpdump
        image: kalilinux/kali-rolling
        command:
          - /bin/sleep
          - infinity
      - name: console
        image: busybox
        imagePullPolicy: IfNotPresent
        command:
          - sleep
          - "3600"
        resources:
          requests:
            memory: "32Mi"
            cpu: "250m"
          limits:
            memory: "64Mi"
            cpu: "500m"    
      restartPolicy: Always
