4-Security/manifests/hello-istio-mtls-ports.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-istio
  namespace: hello-istio
  labels:
    app: hello-istio
spec:
  type: NodePort
  ports:
  - port: 8080
    name: http
  selector:
    app: hello-istio
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-istio-v1
  namespace: hello-istio
spec:
  selector:
    matchLabels:
      app: hello-istio
      version: v1
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: hello-istio
        version: v1
    spec:
      securityContext:
        hostNetwork: true
        privileged: true
        runAsUser: 0
        runAsGroup: 0
      containers:
      - name: tcpdump
        image: kalilinux/kali-rolling
        command:
          - /bin/sleep
          - infinity
      - name: hello-istio
        image: lreimer/hello-istio-golang:1.3.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "32Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "1000m"
        livenessProbe:
          httpGet:
            path: /
            port: 8081
          initialDelaySeconds: 30
          timeoutSeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8081
          initialDelaySeconds: 10
          timeoutSeconds: 10
          periodSeconds: 10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-istio-v2
  namespace: hello-istio
spec:
  selector:
    matchLabels:
      app: hello-istio
      version: v2
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: hello-istio
        version: v2
    spec:
      containers:
      - name: hello-istio
        image: lreimer/hello-istio-golang:2.3.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "32Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "1000m"
        livenessProbe:
          httpGet:
            path: /
            port: 8081
          initialDelaySeconds: 30
          timeoutSeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8081
          initialDelaySeconds: 10
          timeoutSeconds: 10
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: hello-message
  namespace: hello-istio
  labels:
    app: hello-message
spec:
  type: NodePort
  ports:
  - port: 8080
    name: http
  selector:
    app: hello-message
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-message-v1
  namespace: hello-istio
spec:
  selector:
    matchLabels:
      app: hello-message
      version: v1
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: hello-message
        version: v1
    spec:
      containers:
      - name: hello-message
        image: lreimer/hello-message-golang:1.3.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "32Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "1000m"
        livenessProbe:
          httpGet:
            path: /
            port: 8081
          initialDelaySeconds: 30
          timeoutSeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8081
          initialDelaySeconds: 10
          timeoutSeconds: 10
          periodSeconds: 10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-message-v2
  namespace: hello-istio
spec:
  selector:
    matchLabels:
      app: hello-message
      version: v2
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: hello-message
        version: v2
    spec:
      containers:
      - name: hello-message
        image: lreimer/hello-message-golang:2.1.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "32Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "1000m"
        livenessProbe:
          httpGet:
            path: /
            port: 8081
          initialDelaySeconds: 30
          timeoutSeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8081
          initialDelaySeconds: 10
          timeoutSeconds: 10
          periodSeconds: 10
