4-Security/manifests/hello-istio-destination-rules.yaml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "hello-istio"
  namespace: hello-istio
spec:
  host: hello-istio
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL

---

apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "hello-message"
  namespace: hello-istio
spec:
  host: hello-message
  subsets:
  - name: v1
    labels:
      version: v1
  # add v2 subset here
  - name: v2
    labels:
      version: v2
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
