4-Security/manifests/hello-istio-gateway-policy-allow.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ingress-policy
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: ALLOW
  rules:
  - from:
    - source:
       ipBlocks: ["<<CLIENT_IP>>"]
    to:
    - operation:
        methods: ["GET"]
